--- a/views/square.erb
+++ b/views/square.erb
@@ -1,2 +1,9 @@
-<p> Enter a number </p>
 
+
+
+
+<form action="/square/results">
+  <label for="number_id">Enter a number</label>
+  <input id="number_id" name="number" placeholder="What number do you want?">
+  <button>Calculate square</button>
+</form>
